--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </div>
 
     <br><br>
-    
+    <div>
+        <img src="./pexels-alexander-mass-748453803-27757762.jpg" alt="imagen random">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae, provident soluta obcaecati voluptas tempore expedita veniam assumenda minima nisi esse explicabo maiores et. Debitis corporis voluptatem ratione vero suscipit libero molestias, commodi unde quaerat cumque iure illum. Vero ex consectetur quos tenetur quidem illum totam fuga, ipsam suscipit expedita voluptates natus, placeat molestiae corporis exercitationem aspernatur libero nesciunt, commodi cumque vel! Similique tempora ipsam minus officia labore deserunt reprehenderit vel, dignissimos ullam. Quo sapiente amet, maxime quas ab facilis!</p>
+    </div>
 </body>
 </html>
