--- a/index.html
+++ b/index.html
@@ -1,21 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div class="columnlay">
         <h2>Columnas Responsive</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, ducimus quo veritatis, laudantium debitis vel fugit dignissimos repellat mollitia non est. Hic quis ea magnam, esse distinctio iusto qui! Eveniet sequi assumenda nesciunt nobis expedita ea repudiandae cumque tenetur voluptate at qui dolore enim natus quis vero modi consectetur sunt culpa, dolor deserunt, velit nam dolorum! Non et aspernatur facilis excepturi reprehenderit animi neque nihil sunt? Ab, ipsa. Nobis laboriosam libero error labore repellat modi eaque quaerat doloribus fuga optio, veniam aliquam, adipisci non quas officiis ipsum ipsam corrupti odit quo eveniet? Suscipit illum possimus at dicta fuga repellendus exercitationem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque adipisci suscipit, voluptatum atque numquam maiores dicta ea voluptate eveniet, iste repellat expedita in commodi sunt deserunt amet! Commodi quibusdam earum fugiat illo cumque, obcaecati aliquid, deserunt sequi veritatis ullam vero maxime, qui aperiam saepe? Dolor expedita incidunt consequatur dolorum aliquid.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, ducimus quo veritatis, laudantium debitis
+            vel fugit dignissimos repellat mollitia non est. Hic quis ea magnam, esse distinctio iusto qui! Eveniet
+            sequi assumenda nesciunt nobis expedita ea repudiandae cumque tenetur voluptate at qui dolore enim natus
+            quis vero modi consectetur sunt culpa, dolor deserunt, velit nam dolorum! Non et aspernatur facilis
+            excepturi reprehenderit animi neque nihil sunt? Ab, ipsa. Nobis laboriosam libero error labore repellat modi
+            eaque quaerat doloribus fuga optio, veniam aliquam, adipisci non quas officiis ipsum ipsam corrupti odit quo
+            eveniet? Suscipit illum possimus at dicta fuga repellendus exercitationem. Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit. Neque adipisci suscipit, voluptatum atque numquam maiores dicta ea voluptate
+            eveniet, iste repellat expedita in commodi sunt deserunt amet! Commodi quibusdam earum fugiat illo cumque,
+            obcaecati aliquid, deserunt sequi veritatis ullam vero maxime, qui aperiam saepe? Dolor expedita incidunt
+            consequatur dolorum aliquid.</p>
     </div>
 
     <br><br>
-    <div>
-        <img src="./pexels-alexander-mass-748453803-27757762.jpg" alt="imagen random">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae, provident soluta obcaecati voluptas tempore expedita veniam assumenda minima nisi esse explicabo maiores et. Debitis corporis voluptatem ratione vero suscipit libero molestias, commodi unde quaerat cumque iure illum. Vero ex consectetur quos tenetur quidem illum totam fuga, ipsam suscipit expedita voluptates natus, placeat molestiae corporis exercitationem aspernatur libero nesciunt, commodi cumque vel! Similique tempora ipsam minus officia labore deserunt reprehenderit vel, dignissimos ullam. Quo sapiente amet, maxime quas ab facilis!</p>
+    <h2>Responsive Flexbox</h2>
+    <div class="container">
+        <div>
+            <img src="./pexels-pixabay-415829.jpg" alt="imagen random">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae, provident soluta obcaecati
+                voluptas tempore expedita veniam assumenda minima nisi esse explicabo maiores et. Debitis corporis
+                voluptatem ratione vero suscipit libero molestias, commodi unde quaerat cumque iure illum. Vero ex
+                consectetur quos tenetur quidem illum totam fuga, ipsam suscipit expedita voluptates natus, placeat
+                molestiae corporis exercitationem aspernatur libero nesciunt, commodi cumque vel! Similique tempora
+                ipsam minus officia labore deserunt reprehenderit vel, dignissimos ullam. Quo sapiente amet, maxime quas
+                ab facilis!</p>
+        </div>
+        <div>
+            <img src="./pexels-justin-shaifer-501272-1222271.jpg" alt="imagen random">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae, provident soluta obcaecati
+                voluptas tempore expedita veniam assumenda minima nisi esse explicabo maiores et. Debitis corporis
+                voluptatem ratione vero suscipit libero molestias, commodi unde quaerat cumque iure illum. Vero ex
+                consectetur quos tenetur quidem illum totam fuga, ipsam suscipit expedita voluptates natus, placeat
+                molestiae corporis exercitationem aspernatur libero nesciunt, commodi cumque vel! Similique tempora
+                ipsam minus officia labore deserunt reprehenderit vel, dignissimos ullam. Quo sapiente amet, maxime quas
+                ab facilis!</p>
+        </div>
+        <div>
+            <img src="./pexels-heitorverdifotos-2169434.jpg" alt="imagen random">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae, provident soluta obcaecati
+                voluptas tempore expedita veniam assumenda minima nisi esse explicabo maiores et. Debitis corporis
+                voluptatem ratione vero suscipit libero molestias, commodi unde quaerat cumque iure illum. Vero ex
+                consectetur quos tenetur quidem illum totam fuga, ipsam suscipit expedita voluptates natus, placeat
+                molestiae corporis exercitationem aspernatur libero nesciunt, commodi cumque vel! Similique tempora
+                ipsam minus officia labore deserunt reprehenderit vel, dignissimos ullam. Quo sapiente amet, maxime quas
+                ab facilis!</p>
+        </div>
     </div>
+    <br>
+    <h1>Imgenes y tipografía responsive usando Media Queries</h1>
+    <img src="./pexels-bru-no-1461027.jpg" alt="imagen paisaje" class="imgg">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae reiciendis corporis perferendis nulla quaerat ratione quidem numquam voluptas facere iusto et dolorem ducimus, qui, explicabo iste sit quasi? Perferendis, velit laborum dignissimos consequuntur, quaerat excepturi aliquid sequi dolorem itaque quia ipsum commodi ab suscipit quo doloremque doloribus obcaecati laudantium recusandae voluptatem hic non optio. Mollitia ullam, aliquam autem aperiam odio dolore similique, veritatis rerum ipsa dicta doloribus voluptate. Ipsa temporibus nobis minus aliquam sunt, explicabo ducimus ex quas dolorum aperiam!</p>
 </body>
+
 </html>
