--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <br>
-    <h1>Imgenes y tipografía responsive usando Media Queries</h1>
+    <h1>Imágenes y tipografía responsive usando Media Queries</h1>
     <img src="./pexels-bru-no-1461027.jpg" alt="imagen paisaje" class="imgg">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae reiciendis corporis perferendis nulla quaerat ratione quidem numquam voluptas facere iusto et dolorem ducimus, qui, explicabo iste sit quasi? Perferendis, velit laborum dignissimos consequuntur, quaerat excepturi aliquid sequi dolorem itaque quia ipsum commodi ab suscipit quo doloremque doloribus obcaecati laudantium recusandae voluptatem hic non optio. Mollitia ullam, aliquam autem aperiam odio dolore similique, veritatis rerum ipsa dicta doloribus voluptate. Ipsa temporibus nobis minus aliquam sunt, explicabo ducimus ex quas dolorum aperiam!</p>
 </body>
